--- a/abcg/examples/CMakeLists.txt
+++ b/abcg/examples/CMakeLists.txt
@@ -1,2 +1,4 @@
 #add_subdirectory(helloworld)
-add_subdirectory(parouimpar)
+#add_subdirectory(parouimpar)
+#add_subdirectory(asteroids)
+add_subdirectory(estelar)
